--- a/index.html
+++ b/index.html
@@ -93,23 +93,50 @@
                         <option value="Batería">Batería</option>
                     </select>
                 </div>
+                <!-- ✅ PRIMER HORARIO (siempre visible) -->
                 <div class="form-group">
-                    <label class="form-label">Día de clase</label>
-                    <select class="form-select" id="studentDay" required>
-                        <option value="">Seleccionar...</option>
-                        <option value="1">Lunes</option>
-                        <option value="2">Martes</option>
-                        <option value="3">Miércoles</option>
-                        <option value="4">Jueves</option>
-                        <option value="5">Viernes</option>
-                        <option value="6">Sábado</option>
-                    </select>
+                    <label class="form-label">Horario principal</label>
+                    <div class="schedule-row">
+                        <select class="form-select schedule-day" id="studentDay1" required>
+                            <option value="">Día...</option>
+                            <option value="1">Lunes</option>
+                            <option value="2">Martes</option>
+                            <option value="3">Miércoles</option>
+                            <option value="4">Jueves</option>
+                            <option value="5">Viernes</option>
+                            <option value="6">Sábado</option>
+                        </select>
+                        <select class="form-select schedule-time" id="studentTime1" required>
+                            <option value="">Hora...</option>
+                        </select>
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label class="form-label">Horario</label>
-                    <select class="form-select" id="studentTime" required>
-                        <option value="">Seleccionar...</option>
-                    </select>
+
+                <!-- ✅ SEGUNDO HORARIO (oculto inicialmente) -->
+                <div class="form-group" id="secondScheduleGroup" style="display: none;">
+                    <label class="form-label">Horario secundario</label>
+                    <div class="schedule-row">
+                        <select class="form-select schedule-day" id="studentDay2">
+                            <option value="">Día...</option>
+                            <option value="1">Lunes</option>
+                            <option value="2">Martes</option>
+                            <option value="3">Miércoles</option>
+                            <option value="4">Jueves</option>
+                            <option value="5">Viernes</option>
+                            <option value="6">Sábado</option>
+                        </select>
+                        <select class="form-select schedule-time" id="studentTime2">
+                            <option value="">Hora...</option>
+                        </select>
+                        <button type="button" class="btn-remove-schedule" onclick="removeSecondSchedule()">✕</button>
+                    </div>
+                </div>
+
+                <!-- ✅ BOTÓN AGREGAR HORARIO -->
+                <div class="form-group" id="addScheduleGroup">
+                    <button type="button" class="btn-add-schedule" onclick="addSecondSchedule()">
+                        ➕ Agregar segundo horario
+                    </button>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" onclick="closeModal()">Cancelar</button>
