--- a/index.html
+++ b/index.html
@@ -50,20 +50,25 @@
     <div class="students-section" id="studentsSection" style="display: none;">
         <div class="students-header">
             <h2>Alumnos</h2>
-            <div class="students-filters">
-                <select id="instrumentFilter">
-                    <option value="">Todos los instrumentos</option>
-                    <option value="Guitarra">Guitarra</option>
-                    <option value="Piano">Piano</option>
-                    <option value="Violín">Violín</option>
-                    <option value="Bajo">Bajo</option>
-                    <option value="Batería">Batería</option>
-                </select>
-                <select id="statusFilter">
-                    <option value="">Todos</option>
-                    <option value="active">Activos</option>
-                    <option value="inactive">Inactivos</option>
-                </select>
+            <div class="students-controls">
+                <div class="students-filters">
+                    <select id="instrumentFilter">
+                        <option value="">Todos los instrumentos</option>
+                        <option value="Guitarra">Guitarra</option>
+                        <option value="Piano">Piano</option>
+                        <option value="Violín">Violín</option>
+                        <option value="Bajo">Bajo</option>
+                        <option value="Batería">Batería</option>
+                    </select>
+                    <select id="statusFilter">
+                        <option value="">Todos</option>
+                        <option value="active">Activos</option>
+                        <option value="inactive">Inactivos</option>
+                    </select>
+                </div>
+                <button class="btn-credits" onclick="openCreditsModal()">
+                    💳 Gestionar Créditos
+                </button>
             </div>
         </div>
         <div class="students-list" id="studentsList">
@@ -275,6 +280,41 @@
     <!-- Toast Notification -->
     <div class="toast" id="toast"></div>
 
+    <!-- Modal Gestionar Créditos -->
+    <div class="modal" id="creditsModal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 class="modal-title">Gestionar Créditos de Recuperación</h2>
+            </div>
+            <form id="creditsForm">
+                <div class="form-group">
+                    <label class="form-label">Alumno</label>
+                    <select class="form-select" id="creditsStudent" required>
+                        <option value="">Seleccionar alumno...</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label class="form-label">Créditos a agregar</label>
+                    <input type="number" class="form-input" id="creditsAmount" min="1" max="20" value="1" required>
+                    <small style="color: var(--text-light); font-size: 0.8rem;">
+                        Cada crédito permite agendar una recuperación
+                    </small>
+                </div>
+                <div class="form-group">
+                    <label class="form-label">Razón (opcional)</label>
+                    <input type="text" class="form-input" id="creditsReason" placeholder="Ej: Licencias previas al sistema, migración de datos...">
+                </div>
+                <div class="current-credits-info" id="currentCreditsInfo" style="display: none;">
+                    <!-- Se llena dinámicamente -->
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" onclick="closeModal()">Cancelar</button>
+                    <button type="submit" class="btn btn-primary">Agregar Créditos</button>
+                </div>
+            </form>
+        </div>
+    </div>
+    
 <!-- JavaScript Files - ORDEN IMPORTANTE -->
 <script src="js/app.js"></script>
 <script src="js/utils.js"></script>
