--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <label class="form-label">Créditos a agregar</label>
+                    <label class="form-label">Cantidad de créditos</label>
                     <input type="number" class="form-input" id="creditsAmount" min="1" max="20" value="1" required>
                     <small style="color: var(--text-light); font-size: 0.8rem;">
                         Cada crédito permite agendar una recuperación
@@ -457,14 +457,19 @@
                 </div>
                 <div class="form-group">
                     <label class="form-label">Razón (opcional)</label>
-                    <input type="text" class="form-input" id="creditsReason" placeholder="Ej: Licencias previas al sistema, migración de datos...">
+                    <input type="text" class="form-input" id="creditsReason" placeholder="Ej: Licencias previas al sistema, corrección de error...">
                 </div>
                 <div class="current-credits-info" id="currentCreditsInfo" style="display: none;">
                     <!-- Se llena dinámicamente -->
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" onclick="closeModal()">Cancelar</button>
-                    <button type="submit" class="btn btn-primary">Agregar Créditos</button>
+                    <button type="button" class="btn btn-present" onclick="addCreditsToStudent()">
+                        ➕ Agregar Créditos
+                    </button>
+                    <button type="button" class="btn btn-absent" onclick="removeCreditsFromStudent()">
+                        ➖ Quitar Créditos
+                    </button>
                 </div>
             </form>
         </div>
