Mejora VISUAL pequeña calendario

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     <!-- Header -->
     <div class="header">
         <div class="header-top">
-            <h1>CLASES</h1>
+            <h1>&nbsp;&nbsp;&nbsp;CLASES</h1>
             <div class="week-nav">
                 <button onclick="changeWeek(-1)">‹</button>
                 <span id="currentWeek">Semana Actual</span>
