--- a/index.html
+++ b/index.html
@@ -174,23 +174,62 @@
 
     <!-- Header -->
     <div class="header">
-        <div class="header-top">
-            <h1>&nbsp;&nbsp;&nbsp;CLASES</h1>
-            <div class="week-nav">
-                <button onclick="changeWeek(-1)">‹</button>
-                <span id="currentWeek">Semana Actual</span>
-                <button onclick="changeWeek(1)">›</button>
+        <div class="header-calendar-content" id="calendarHeader">
+            <div class="header-top">
+                <h1>&nbsp;&nbsp;&nbsp;CLASES</h1>
+                <div class="week-nav">
+                    <button onclick="changeWeek(-1)">‹</button>
+                    <span id="currentWeek">Semana Actual</span>
+                    <button onclick="changeWeek(1)">›</button>
+                </div>
+            </div>
+            <div class="week-days">
+                <div class="week-day-header" data-day="1">Lun<br><span id="day1"></span></div>
+                <div class="week-day-header" data-day="2">Mar<br><span id="day2"></span></div>
+                <div class="week-day-header" data-day="3">Mié<br><span id="day3"></span></div>
+                <div class="week-day-header" data-day="4">Jue<br><span id="day4"></span></div>
+                <div class="week-day-header" data-day="5">Vie<br><span id="day5"></span></div>
+                <div class="week-day-header" data-day="6">Sáb<br><span id="day6"></span></div>
             </div>
         </div>
-        <div class="week-days">
-            <div class="week-day-header" data-day="1">Lun<br><span id="day1"></span></div>
-            <div class="week-day-header" data-day="2">Mar<br><span id="day2"></span></div>
-            <div class="week-day-header" data-day="3">Mié<br><span id="day3"></span></div>
-            <div class="week-day-header" data-day="4">Jue<br><span id="day4"></span></div>
-            <div class="week-day-header" data-day="5">Vie<br><span id="day5"></span></div>
-            <div class="week-day-header" data-day="6">Sáb<br><span id="day6"></span></div>
+
+        <!-- ✅ AGREGAR ESTA SECCIÓN COMPLETA DESPUÉS del calendarHeader: -->
+        <div class="header-students-content" id="studentsHeader" style="display: none;">
+            <div class="header-students-top">
+                <h1>👥 ALUMNOS</h1>
+                <div class="students-stats-tabs">
+                    <div class="stat-tab-large active" id="activeStudentsTab">
+                        <span class="stat-tab-number" id="activeStudentsCount">0</span>
+                        <span class="stat-tab-label">Activos</span>
+                    </div>
+                    <div class="stat-tab-large" id="creditsTab">
+                        <span class="stat-tab-number" id="totalCreditsCount">0</span>
+                        <span class="stat-tab-label">Créditos</span>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="students-action-row">
+                <select class="students-filter-combined" id="studentsMainFilter">
+                    <option value="">Todos los alumnos</option>
+                    <option value="active">Solo activos</option>
+                    <option value="inactive">Solo inactivos</option>
+                    <option value="with-credits">Solo con créditos</option>
+                    <option value="guitar">Solo guitarra</option>
+                    <option value="piano">Solo piano</option>
+                    <option value="violin">Solo violín</option>
+                    <option value="bass">Solo bajo</option>
+                    <option value="drums">Solo batería</option>
+                </select>
+                <button class="btn-new-student-mobile" onclick="openStudentForm()">+ Nuevo</button>
+            </div>
+            
+            <button class="btn-credits-mobile" onclick="openCreditsModal()">
+                💳 Gestionar Créditos
+            </button>
         </div>
     </div>
+
 
     <!-- Main Content -->
     <div class="main-content">
@@ -203,29 +242,6 @@
 
     <!-- Students Section -->
     <div class="students-section" id="studentsSection" style="display: none;">
-        <div class="students-header">
-            <h2>Alumnos</h2>
-            <div class="students-controls">
-                <div class="students-filters">
-                    <select id="instrumentFilter">
-                        <option value="">Todos los instrumentos</option>
-                        <option value="Guitarra">Guitarra</option>
-                        <option value="Piano">Piano</option>
-                        <option value="Violín">Violín</option>
-                        <option value="Bajo">Bajo</option>
-                        <option value="Batería">Batería</option>
-                    </select>
-                    <select id="statusFilter">
-                        <option value="">Todos</option>
-                        <option value="active">Activos</option>
-                        <option value="inactive">Inactivos</option>
-                    </select>
-                </div>
-                <button class="btn-credits" onclick="openCreditsModal()">
-                    💳 Gestionar Créditos
-                </button>
-            </div>
-        </div>
         <div class="students-list" id="studentsList">
             <!-- Lista generada dinámicamente -->
         </div>
@@ -397,34 +413,28 @@
         </div>
     </div>
 
-    <!-- Floating Action Button -->
-    <div class="fab" onclick="openAttendanceMode()">
-        <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="3">
-            <path d="M9 11l3 3L22 4"/>
-        </svg>
-    </div>
 
     <!-- Bottom Navigation -->
     <div class="bottom-nav">
-        <div class="nav-item active" onclick="switchTab('calendar')">
+        <div class="nav-item active" onclick="switchTab('calendar', event)">
             <svg class="nav-icon" fill="currentColor" viewBox="0 0 24 24">
                 <path d="M19 3h-1V1h-2v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V8h14v11zM7 10h5v5H7z"/>
             </svg>
             <span class="nav-label">Calendario</span>
         </div>
-        <div class="nav-item" onclick="switchTab('students')">
+        <div class="nav-item" onclick="switchTab('students', event)">
             <svg class="nav-icon" fill="currentColor" viewBox="0 0 24 24">
                 <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/>
             </svg>
             <span class="nav-label">Alumnos</span>
         </div>
-        <div class="nav-item" onclick="switchTab('finance')">
+        <div class="nav-item" onclick="switchTab('finance', event)">
             <svg class="nav-icon" fill="currentColor" viewBox="0 0 24 24">
                 <path d="M11.8 10.9c-2.27-.59-3-1.2-3-2.15 0-1.09 1.01-1.85 2.7-1.85 1.78 0 2.44.85 2.5 2.1h2.21c-.07-1.72-1.12-3.3-3.21-3.81V3h-3v2.16c-1.94.42-3.5 1.68-3.5 3.61 0 2.31 1.91 3.46 4.7 4.13 2.5.6 3 1.48 3 2.41 0 .69-.49 1.79-2.7 1.79-2.06 0-2.87-.92-2.98-2.1h-2.2c.12 2.19 1.76 3.42 3.68 3.83V21h3v-2.15c1.95-.37 3.5-1.5 3.5-3.55 0-2.84-2.43-3.81-4.7-4.4z"/>
             </svg>
             <span class="nav-label">Finanzas</span>
         </div>
-        <div class="nav-item" onclick="switchTab('settings')">
+        <div class="nav-item" onclick="switchTab('settings', event)">
             <svg class="nav-icon" fill="currentColor" viewBox="0 0 24 24">
                 <path d="M19.14,12.94c0.04-0.3,0.06-0.61,0.06-0.94c0-0.32-0.02-0.64-0.07-0.94l2.03-1.58c0.18-0.14,0.23-0.41,0.12-0.61 l-1.92-3.32c-0.12-0.22-0.37-0.29-0.59-0.22l-2.39,0.96c-0.5-0.38-1.03-0.7-1.62-0.94L14.4,2.81c-0.04-0.24-0.24-0.41-0.48-0.41 h-3.84c-0.24,0-0.43,0.17-0.47,0.41L9.25,5.35C8.66,5.59,8.12,5.92,7.63,6.29L5.24,5.33c-0.22-0.08-0.47,0-0.59,0.22L2.74,8.87 C2.62,9.08,2.66,9.34,2.86,9.48l2.03,1.58C4.84,11.36,4.8,11.69,4.8,12s0.02,0.64,0.07,0.94l-2.03,1.58 c-0.18,0.14-0.23,0.41-0.12,0.61l1.92,3.32c0.12,0.22,0.37,0.29,0.59,0.22l2.39-0.96c0.5,0.38,1.03,0.7,1.62,0.94l0.36,2.54 c0.05,0.24,0.24,0.41,0.48,0.41h3.84c0.24,0,0.44-0.17,0.47-0.41l0.36-2.54c0.59-0.24,1.13-0.56,1.62-0.94l2.39,0.96 c0.22,0.08,0.47,0,0.59-0.22l1.92-3.32c0.12-0.22,0.07-0.47-0.12-0.61L19.14,12.94z M12,15.6c-1.98,0-3.6-1.62-3.6-3.6 s1.62-3.6,3.6-3.6s3.6,1.62,3.6,3.6S13.98,15.6,12,15.6z"/>
             </svg>
